# DataMining_Assignment2

./: .gitignore  README.md  gbdt_grid_results_3.csv  pyproject.toml  requirements.txt
figs/model_eval/: gbdt_grid_results_1.csv  gbdt_grid_results_2.csv  gbdt_grid_results_3.csv
scripts/: scrpt_aggregation.py  scrpt_data_analysis.py  scrpt_data_cleaning.py  scrpt_feature_engineering.py  scrpt_gbdt.py  scrpt_imputation.py  scrpt_knn.py  scrpt_knn_recommender.py  scrpt_ranking_model.py  scrpt_utils.py
src/: aggregator.py  csv_utils_basic.py  data_analysis.py  data_cleaning.py  feature_engineering.py  gbdt_model.py  imputation.py  knn_identifier.py  knn_recommender.py  plotting.py
